mutants.out/log/src__tls.rs_line_63_col_9.log

*** src/tls.rs:63:9: replace TlsStream<TokioTcpStream>::with_connector -> Result<Self, Error> with Ok(Default::default())

*** mutation diff:
--- src/tls.rs
+++ replace TlsStream<TokioTcpStream>::with_connector -> Result<Self, Error> with Ok(Default::default())
@@ -55,23 +55,17 @@
         )
         .await
     }
 
     /// Create a new TLS connection over TCP using a non-default TLS configuration.
     ///
     /// See `connect` for details about the `url` parameter.
     pub async fn with_connector(connector: TlsConnector, url: Option<&str>) -> Result<Self, Error> {
-        let url = match url {
-            Some(url) => utils::url_parse(url),
-            None => utils::url_parse(&utils::get_env_url()),
-        }?;
-        let hostname = utils::host_from_url(&url);
-        let tcp_stream = TokioTcpStream::connect(&hostname).await?;
-        Ok(TlsStream::new(tcp_stream, connector, &hostname).await?)
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl<S> TlsStream<S>
 where
     S: AsyncRead + AsyncWrite + Send + Unpin + Reconnect + Debug + 'static,
 {
     /// Create a new TLS connection on an existing stream.


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
    Finished dev [unoptimized + debuginfo] target(s) in 1.00s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `tls::TlsStream<tokio::net::TcpStream>: Default` is not satisfied
  --> src/tls.rs:63:12
   |
63 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `tls::TlsStream<tokio::net::TcpStream>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
